fixed buttons spacing

--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -243,7 +243,7 @@
     letter-spacing: 1px;
     margin-left: -12px;
     position: absolute;
-    bottom: 60px;
+    bottom: 75px;
 
     @media only screen and (max-width : 480px) {
         bottom: 28px;
